backend/k8s/ingress/ashapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashapp-ingress
  namespace: ashapp
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:  # No host specified, will work with IP
      paths:
      # Root path goes to ASHapp
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app
            port:
              number: 5000
      # monitor routes
      - path: /monitor
        pathType: Prefix
        backend:
          service:
            name: flask-monitor
            port:
              number: 6000
      # Deployer routes
      - path: /deployer
        pathType: Prefix
        backend:
          service:
            name: deployer-app
            port:
              number: 5000
